--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 				<title>Сайт с пруфами</title>
 </head>
 <body bgcolor="grey">
-				<h1 align="center">Ержан Лох</h1>
+				<h1 align="center">С др Пидарасина</h1>
 </body>
 </html>
