--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+				<link rel="stylesheet" href="index.css"></link>
 				<meta charset="UTF-8">
-				<title>Сайт с пруфами</title>
+				<title>Заголовок страницы</title>
 </head>
-<body bgcolor="grey">
-				<h1 align="center">Сеним Лох</h1>
+<body bgcolor ="pink">
+				<div align ="center">
+								<h1>Егимбайка</h1>
+				</div>
 </body>
 </html>
